⚡ Optimize images (97.8% size reduction)
- Convert logo to WebP (402KB → 4.3KB)
- Optimize favicon (402KB → 1.9KB)
- Add Apple Touch Icon (11.8KB)
- Total: 802KB → 18KB

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.12",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "sharp": "^0.34.5"
   }
 }
